kubernetes/improve-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: improve-ns
  labels:
    name: improve-ns
