kubernetes/campsite-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campsite
  labels:
    app: campsite
  namespace: improve-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: campsite
  template:
    metadata:
      labels:
        app: campsite
    spec:
      containers:
      - name: campsite
        image: maiello/improve_campsite:0.0.2-SNAPSHOT
        ports:
        - containerPort: 8080
