kubernetes/reservation-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation
  labels:
    app: reservation
  namespace: improve-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reservation
  template:
    metadata:
      labels:
        app: reservation
    spec:
      containers:
      - name: reservation
        image: maiello/improve_reservation:0.0.2-SNAPSHOT
        ports:
        - containerPort: 8080
