kubernetes/user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
  namespace: improve-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: maiello/improve_user:0.0.2-SNAPSHOT
        ports:
        - containerPort: 8080
