kubernetes/reservation-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reservation
  labels:
    app: reservation
    spring-boot: "true"
  namespace: improve-ns
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: reservation
  type: NodePort
