kubernetes/user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
    spring-boot: "true"
  namespace: improve-ns
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: user
  type: NodePort
